# openpi-eval

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: docker.md  norm_stats.md  remote_inference.md
examples/: convert_jax_model_to_pytorch.py
examples/libero_env/: README.md  benchmark_parallel_clients.py  eval_all.py  main.py  pyproject.toml  setup_libero_config.py
examples/libero_env/tests/: conftest.py  test_benchmark_parallel_clients.py  test_eval_all.py  test_libero_env.py
examples/liberopro_env/: README.md  eval_all.py  main.py  pyproject.toml  setup_liberopro_config.py
examples/liberopro_env/tests/: conftest.py  test_eval_all.py  test_liberopro_env.py
examples/metaworld/: README.md  eval_all.py  generate_dataset.py  main.py
examples/metaworld/tests/: conftest.py  test_main_artifacts.py
examples/robocasa_env/: README.md  eval_all.py  main.py  pyproject.toml
examples/robocasa_env/tests/: conftest.py  test_eval_all.py  test_robocasa_env.py
examples/robolab_env/: README.md  eval_all.py  main.py  pyproject.toml
examples/robolab_env/tests/: test_eval_all.py  test_main.py
examples/world_model_env/: ARCHITECTURE.md  EXPERIMENT_LEDGER.md  README.md  cache_future_rollouts.py  cache_generated_wan_latents.py  cache_pi05_wan_prefix_tokens.py  cache_wan_vae_latents.py  compare_wan_latent_caches.py  describe_wan_action_modes.py  diagnose_action_priors.py  diagnose_future_motion.py  diagnose_idm.py  diagnose_idm_horizon.py  dry_run_pipeline.py  eval.py  eval_idm.py  eval_pi05_wan_action_expert.py  eval_pipeline.py  evaluate_future_cache.py  export_wan_dataset.py  infer_pi05_wan_action_expert.py  infer_wan_idm.py  inspect_alignment.py  inspect_dataset.py  inspect_wan_kv_feasibility.py  interpolate_wan_prefix_caches.py  plan_wan_action_mode_experiment.py  prepare_wan_finetune.py  pyproject.toml  run_idm_experiments.py  run_idm_information_gain.py  run_wan_action_mode_matrix.py  run_wan_finetune.py  serve_world_model.py  smoke_wan_dit_prefix_encoder.py  summarize_experiments.py  summarize_wan_action_modes.py  train.py  train_idm.py  train_pi05_wan_action_expert.py  (+1 more)
examples/world_model_env/tests/: test_action_modes.py  test_cache_generated_wan_latents.py  test_checkpoint_metadata.py  test_compare_wan_latent_caches.py  test_data.py  test_dataset_split.py  test_diagnose_action_priors.py  test_diagnose_future_motion.py  test_diagnose_idm.py  test_diagnose_idm_horizon.py  test_diffsynth_wan.py  test_dry_run_pipeline.py  test_eval_idm.py  test_eval_pi05_wan_action_expert.py  test_eval_pipeline.py  test_export_wan_dataset.py  test_future_cache.py  test_generated_wan_latent_cache.py  test_infer_pi05_wan_action_expert.py  test_infer_wan_idm.py  test_inspect_alignment.py  test_inspect_wan_kv_feasibility.py  test_interpolate_wan_prefix_caches.py  test_models.py  test_pi05_wan_action_expert.py  test_plan_wan_action_mode_experiment.py  test_prepare_wan_finetune.py  test_run_idm_experiments.py  test_run_idm_information_gain.py  test_run_wan_action_mode_matrix.py  test_run_wan_finetune.py  test_serve_world_model.py  test_summarize_experiments.py  test_summarize_wan_action_modes.py  test_train_cache_weighting.py  test_training_smoke.py  test_validate_wan_lora.py  test_wan22.py  test_wan_dit_prefix_encoder.py  test_wan_kv_cache.py  (+2 more)
examples/world_model_env/world_model/: __init__.py  action_modes.py  config.py  data.py  diffsynth_wan.py  media.py  models.py  pi05_wan_action_expert.py  train_lib.py  wan22.py  wan_dit_prefix_encoder.py  wan_kv_cache.py  wan_prefix_encoder.py  wan_real_kv_probe.py  wan_vae_encoder.py
scripts/: benchmark_policy_server_microbatch.py  convert_libero_data_to_lerobot.py  generate_result_graphs.py  serve_policy.py  train.py  train_pytorch.py  train_test.py
src/openpi/models/: model.py  model_test.py  tokenizer.py  tokenizer_test.py
src/openpi/models_pytorch/: convert.py  pi0_pytorch.py
src/openpi/policies/: droid_policy.py  droid_policy_test.py  libero_policy.py  libero_policy_test.py  metaworld_lerobot_policy.py  policy.py  policy_config.py  policy_test.py  robocasa_policy.py
src/openpi/serving/: websocket_policy_server.py  websocket_policy_server_test.py
src/openpi/shared/: download.py  image_tools_test.py
src/openpi/training/: config.py  data_loader.py  data_loader_test.py
