[project]
name = "liberopro-env"
version = "0.1.0"
description = "LIBERO-Pro evaluation client for OpenPI policies"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "libero",
    "openpi-client",
    "hydra-core==1.2.0",
    "numpy==1.22.4",
    "wandb==0.13.1",
    "easydict==1.9",
    "transformers==4.21.1",
    "opencv-python==4.6.0.66",
    "robomimic==0.2.0",
    "einops==0.4.1",
    "thop==0.1.1-2209072238",
    "robosuite==1.4.0",
    "bddl==1.0.1",
    "future==0.18.2",
    "matplotlib==3.5.3",
    "cloudpickle==2.1.0",
    "gym==0.25.2",
    "torch==1.11.0+cu113",
    "torchvision==0.12.0+cu113",
    "torchaudio==0.11.0",
    "websockets>=13.1",
    "loguru>=0.7.3",
    "msgpack>=1.1.1",
    "tqdm>=4.66.5",
    "imageio>=2.35.1",
]

[[tool.uv.index]]
name = "pytorch-cu113"
url = "https://download.pytorch.org/whl/cu113"

[tool.uv.sources]
libero = { path = "../../third_party/liberopro", editable = true }
openpi-client = { path = "../../packages/openpi-client", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.15.9",
    "tyro>=0.9.17",
]

[tool.ruff.lint]
select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
